css/app.css
/* RESET */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;

}

ul, ol, menu {
    list-style-type: none;
}

img {
    max-width: 100%;
}

a, button {
    text-decoration: none;
    color: currentColor;
}

/* LAYOUT */

.container-lg {
    margin: 0 auto;
    width: 100%;
}

.container {
    margin: 0 auto;
    max-width: 1200px;
}

.container-sm {
    margin: 0 auto;
    max-width: 1000px;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.col-2 {
    width: calc(2 * 100% / 12);
}

.col-3 {
    width: calc(3 * 100% / 12);
}

.col-4 {
    width: calc(4 * 100% / 12);
}

.col-6 {
    width: calc(6 * 100% / 12);
}

.col-8 {
    width: calc(8 * 100% / 12);
}

.col-9 {
    width: calc(9 * 100% / 12);
}

.col-12 {
    width: 100%;
}

.col-20 {
    width: 20%;
}

/* STYLE */

* {
    font-family: 'Open Sans', sans-serif;
}

.hero-title {
    font-size: 80px;
    font-weight: 800;
}

.section-title {
    font-size: 40px;
}

.section-subtitle {
    font-size: 25px;
}

.section-strong {
    font-size: 14px;
}

.section-p {
    font-size: 15px;
}

p , span { /* FIX THIS YOU LAZY BUM */
    font-size: 15px;
}

label {   
    padding:1em;
    margin:1em;
    cursor:pointer;
}

.oldschool-link {
    color: blue;
    text-decoration: underline;
}

.button {
    background-color: #0061FF;
    color: white;
    padding: 5px 15px;
}

.button-white {
    background-color: white;
    color: black;
    border: 1px solid black;
    padding-top: 10px;
    padding-bottom: 10px;
}

/* UTILITIES */

.flex {
    display: flex;
}

.row-reverse {
    flex-direction: row-reverse;
}

.column {
    flex-direction: column;
}

.justify-between {
    justify-content: space-between;
}

.align-center {
    align-items: center;
}

.flex-wrap {
    flex-wrap: wrap;
}

.flex-grow-1 {
    flex-grow: 1;
}

.txt-align-center {
    text-align: center;
}

.list-indented {
    margin-left: 1em;
}

.indent-second-line { 
    text-indent: -0.5em; 
    padding-left: 0.5em; 
}

.cl-blue {
    color: #0061FF;
}

.cl-lightgray {
    color: lightgray;
}

/* HEADER */

.page-header .link-menu {
    padding: 20px;
}

.page-header .link-menu > li {
    padding: 5px 15px;
}

.page-header .link-menu .button-item {
    padding: 0;
}

/* MAIN */

/* - HERO */

.hero {
    padding-top: 80px;
    padding-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: #B4D0E7;
}

.hero .motto {
    padding-bottom: 40px;
}

.hero .hero-article {
    padding-right: 40px;
    gap: 40px;
}

.hero .hero-article .hero-icon {
    font-size: 40px;
    margin-top: auto;
}

.hero-img {
    margin-bottom: -100px;
}

#subscriptions .section-title {
    padding-top: 100px;
}

/*  - SUBSCRIPTIONS */

main section:not(.hero, .designit-section) {
    padding: 50px 0;
}

#subscriptions .section-title {
    margin-bottom: 20px;

}

#subscriptions .cont-buttons {
    text-align: left;
    padding: 50px 0;
}

#subscriptions .cont-buttons > * {
    margin-left: 0;
    padding-left: 0;
}

#subscriptions .sub-list {
    gap: 40px;
}

#subscriptions .sub-list .col-4 {
    width: calc((4 * 100% / 12) - (2 * 40px / 3)); /* NE VADO MOLTO FIERO */
}

#subscriptions .col-4, #subscriptions .col-12 {
    border: 1px solid lightgray;
}

#subscriptions .col-name {
    padding: 5px 0;
    border-bottom: 1px solid lightgray;
}

#subscriptions .col-4 > div {
    padding: 10px 25px;
}

#subscriptions .col-top > *, #subscriptions .col-bottom > * {
    padding: 20px 0;
}

#subscriptions .col-4 ul > li {
    padding: 10px 0;
}

#subscriptions .monthly {
    display: block;
}

#subscriptions .col-top {
    border-bottom: 0;
}

#subscriptions  .col-bottom {
    border-top: 0;
}

#subscriptions .button {
    padding-top: 10px;
    padding-bottom: 10px;
}

#subscriptions .col-top::after {
    content: "";
    width: 20%;
    border: 1px solid lightgrey;
    display: block;
    margin-top: 20px;
}

#subscriptions .col-12 .flex > * {
    padding: 30px;
}

#subscriptions .col-12 .col-8 .section-subtitle {
    margin-bottom: 15px;
}

#subscriptions .col-12 .col-8 .section-strong {
    margin-bottom: 40px;
}

#subscriptions .col-12 .col-4 {
    border: 0;
}

#subscriptions .col-12 .col-4 .button {
    padding-right: 30px;
    padding-left: 30px;
}

/*  - ENTRA IN CONTATTO */

.entra-in-contatto .col-4 {
    padding-top: 40px;
    padding-left: 40px;
}

.entra-in-contatto .col-4 > * {
    margin-bottom: 30px;
}

/*  - FEATURE LIST */

.features-list .section-title {
    margin-bottom: 50px;
}

.features-list .col-4 {
    padding: 0 25px;
}

.features-list .section-subtitle {
    margin-bottom: 25px;
}

.features-list .section-p {
    margin-bottom: 60px;
}

/*  - CLIENTS */

.clients {
    margin-bottom: 100px;
}

.clients .section-title {
    margin-bottom: 50px;
}

/*  - DESIGNIT */

.designit-section .container-lg {
    height: calc(100vw / 3);
}

.designit-section .school-square {
    height: 50%;
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.designit-section .square-list img {
    filter: invert(100%);
    max-width: 50%;
}

#designit-square {
    background-color: #A2D39B;
    border: 15px solid #D1E9CD;
}

#florida {
    background-color: #0093CE;
}

#arizona {
    background-color: #61082B;
}

#topps {
    background-color: #FF1C1C;
}

.designit-lg {
    background-color: #F5F5F5;
    padding: 40px;
    height: calc(100vw / 3);
    overflow: hidden;
}

.designit-lg img {
    width: 40%;
}

.designit-lg-img::after {
    content: "";
    width: 20%;
    border: 1px solid lightgrey;
    display: block;
    margin: 40px 0;
}

.designit-lg p {
    margin-bottom: 40px;
}

#world-bicycle {
    background-color: #D5001F;
}

#lonely-planet {
    background-color: #0D2481;
}

#hearst {
    background-color: #B4D0E7;
}

#clear-channel {
    background-color: #FFD830;
}

/*  - FREE TRIAL */

.free-trial {
    background-color: #B4D0E7;
}

.free-trial .container-sm > .row {
    padding: 40px 0;
}

.free-trial .section-title {
    color: #61082B;
}

.free-trial .button-white {
    border: 0;
    padding: 10px 40px;
}

/*  - FAQ */

.faq {
    margin: 80px 0;
}

.faq .section-title {
    padding: 50px 0;
    border-bottom: 1px solid black;
}

.faq .row.column .flex {
    padding: 40px 0;
    border-bottom: 1px solid black;
    align-items: center;
    justify-content: space-between;
}

.faq .flex span {
    padding-right: 40px;
}

/* FOOTER */

.page-footer {
    background-color: black;
    color: white;
    padding-top: 50px;
    padding-left: 20px;
    padding-right: 20px;
}

.page-footer .section-subtitle {
    padding: 30px 0;
}

.page-footer li {
    padding: 5px 0;
} 

.page-footer .footer-nav .container::after {
    content: "";
    width: 10%;
    border: 1px solid white;
    display: block;
    margin-top: 100px;
    opacity: 0.5;
}

.language-menu {
    opacity: 0.5;
    padding: 40px 0;
}

